dark mode fix

--- a/src/index.css
+++ b/src/index.css
@@ -96,7 +96,7 @@ a {
     border-radius: 25px !important;
   }
   .search-bar{
-    width:200px;
+    width:170px;
   }
 }
 
